@@ -1463,8 +1463,13 @@ void switch_output_file(struct lib_ccx_ctx *ctx, struct encoder_ctx *enc_ctx, in
 	const char *ext = get_file_extension(ctx->write_format);
 	char suffix[32];
 	sprintf(suffix, "_%d", track_id);
-	enc_ctx->out->filename = create_outfilename(get_basename(enc_ctx->first_input_file), suffix, ext);
-	enc_ctx->out->fh = open(enc_ctx->out->filename, O_RDWR | O_CREAT | O_TRUNC | O_BINARY, S_IREAD | S_IWRITE);
+	char *basename = get_basename(enc_ctx->out->original_filename);
+	if (basename != NULL)
+	{
+		enc_ctx->out->filename = create_outfilename(basename, suffix, ext);
+		enc_ctx->out->fh = open(enc_ctx->out->filename, O_RDWR | O_CREAT | O_TRUNC | O_BINARY, S_IREAD | S_IWRITE);
+		free(basename);
+	}
 
 	write_subtitle_file_header(enc_ctx, enc_ctx->out);
 
